<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="image"
            type="android.net.Uri" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <View
            android:id="@+id/bgBright"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_bright"
            app:layout_constraintHeight_percent="0.35"
            />

        <View
            android:id="@+id/bgTransparent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/primaryOrangeTransparent"
            app:layout_constraintHeight_percent="0.35"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:text="@string/label_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Text.Title.White"
            android:layout_marginTop="@dimen/sizeMarginTop"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcomeDesc"
            android:text="@string/label_welcome_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Text.White"
            android:layout_marginTop="@dimen/sizeMarginText"
            android:layout_marginStart="@dimen/sizeMarginMedium"
            android:layout_marginEnd="@dimen/sizeMarginMedium"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/sizeRadius"
            app:cardElevation="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/sizeMarginLarge"
            android:layout_marginEnd="@dimen/sizeMarginLarge"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/layProfile"
                    android:layout_width="@dimen/sizeImage"
                    android:layout_height="@dimen/sizeImage"
                    android:layout_marginTop="@dimen/sizeMarginMedium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/shape_circle_border_gray"
                    >

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="@dimen/sizeImage"
                        android:layout_height="@dimen/sizeImage"
                        app:shapeAppearance="@style/ShapeImageView.Circle"
                        tools:ignore="MissingPrefix"
                        app:source="@{image}"
                        />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/layProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/sizeMarginMedium"
                    android:layout_marginEnd="@dimen/sizeMarginMedium"
                    android:layout_marginTop="@dimen/sizeMarginMedium"
                    android:background="@drawable/shape_rectangle_border_gray"
                    android:padding="@dimen/sizePaddingEditText"
                    android:hint="@string/hint_input_name"
                    style="@style/Text"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPalindrome"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/etName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/sizeMarginMedium"
                    android:layout_marginEnd="@dimen/sizeMarginMedium"
                    android:layout_marginTop="@dimen/sizeMarginSmall"
                    android:background="@drawable/shape_rectangle_border_gray"
                    android:padding="@dimen/sizePaddingEditText"
                    android:hint="@string/hint_input_palindrome"
                    style="@style/Text"
                    />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/etPalindrome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/sizeMarginMedium"
                    android:layout_marginEnd="@dimen/sizeMarginMedium"
                    android:layout_marginTop="@dimen/sizeMarginMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/sizeMarginMedium"
                    android:weightSum="1"
                    android:orientation="horizontal"
                    >

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnNext"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/buttonHeight"
                        android:background="@drawable/button_primary"
                        android:textColor="@drawable/button_text_white"
                        android:text="@string/label_next"
                        android:enabled="true"
                        style="@style/ButtonText"
                        android:layout_weight="0.3"
                        android:layout_marginEnd="@dimen/sizeMarginExSmall"
                        />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCheck"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/buttonHeight"
                        android:background="@drawable/button_primary"
                        android:textColor="@drawable/button_text_white"
                        android:text="@string/label_check"
                        android:enabled="true"
                        style="@style/ButtonText"
                        android:layout_weight="0.7"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCopyright"
            android:text="@string/label_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Text.Copyright"
            android:layout_marginBottom="@dimen/sizeMarginLarge"
            android:layout_marginStart="@dimen/sizeMarginMedium"
            android:layout_marginEnd="@dimen/sizeMarginMedium"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
