<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/bgBright"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_bright"
        app:layout_constraintHeight_percent="0.35"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/three_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHelo"
        app:layout_constraintBottom_toBottomOf="@id/tvName"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHelo"
        android:text="@string/label_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/sizeMarginLarge"
        style="@style/Text.Title.Large"
        android:layout_marginTop="@dimen/sizeMarginTop"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:text="@string/label_hello"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHelo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/sizeMarginLarge"
        android:layout_marginEnd="@dimen/sizeMarginLarge"
        style="@style/Text.Title.Large.Orange"
        android:layout_marginTop="@dimen/sizeMarginText"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layButton"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_marginTop="@dimen/sizeDistance84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/sizeMarginLarge"
        android:layout_marginEnd="@dimen/sizeMarginLarge"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEvent"
            style="@style/ButtonText.Large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight48"
            android:layout_weight="0.3"
            android:background="@drawable/button_primary"
            android:enabled="true"
            android:text="@string/label_choose_event"
            android:textColor="@drawable/button_text_white"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuest"
            style="@style/ButtonText.Large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight48"
            android:layout_weight="0.3"
            android:background="@drawable/button_primary"
            android:enabled="true"
            android:text="@string/label_choose_guest"
            android:textColor="@drawable/button_text_white"
            android:layout_marginTop="@dimen/sizeMarginExSmall"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:srcCompat="@drawable/img_suitmedia"
        app:layout_constraintTop_toBottomOf="@id/layButton"
        app:layout_constraintBottom_toTopOf="@id/ivBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/sizeMarginLarge"
        android:layout_marginTop="@dimen/sizeMarginLarge"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBottom"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_bg_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>